# tts_rust

./: .gitignore  Cargo.toml  README.md
.github/workflows/: main.yml
cli/: Cargo.toml  main.rs
cli/src/: main.rs
src/: constants.rs  languages.rs  lib.rs  tts.rs
src/url/: core.rs
tests/: Cargo.toml  one.rs  two.rs
