[package]
name = "tts_rust"
version = "0.3.5"
edition = "2021"
description = "Simple & easy text-to-speech module for your needs."
license = "MIT"
readme = "README.md"
repository = "https://github.com/dhairy-online/tts_rust"
keywords = ["tts", "text_to_speech", "gTTS"]

[dependencies]
minreq = { version="2.0.3", features=["https"] }
percent-encoding = "2.1.0"
rodio = "0.14.0"
structopt = "0.3"
quicli = "0.4.0"

# bin cli
[[bin]]
name = "tts"
path = "cli/main.rs"
